fix: z-index

--- a/projects/quang/components/date/date.component.scss
+++ b/projects/quang/components/date/date.component.scss
@@ -37,6 +37,7 @@
   }
 
   .air-datepicker-global-container {
+    z-index: 1000;
     position: static;
   }
 }
